chore: update app metadata and branding assets for toy store management system

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#f59e0b" />
     <meta
       name="description"
-      content="Web site created using create-tsrouter-app"
+      content="Sistema de gerenciamento para loja de brinquedos - Controle de clientes, vendas e estatísticas"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - frontend</title>
+    <title>Toy Store - Gerenciamento de Loja de Brinquedos</title>
   </head>
   <body>
     <div id="app"></div>
